--- a/ANALYTICS VIDYA/Janatahack cross-sell-prediction/01 Janatahack cross-sell-prediction.ipynb
+++ b/ANALYTICS VIDYA/Janatahack cross-sell-prediction/01 Janatahack cross-sell-prediction.ipynb
@@ -16,6 +16,7 @@
    ],
    "source": [
     "from matplotlib import pyplot as plt\n",
+    "import os\n",
     "import seaborn as sns\n",
     "import numpy as np # linear algebra\n",
     "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
